TAG: vega_ensemblseqload-4-3-1-1
DATE: 11/30/2009
STAFF: sc
CHANGES: TR9774 initial tag
