@@ -1,3 +1,8 @@
+TAG: vega_ensemblseqload-4-3-1-2
+DATE: 12/01/2009
+STAFF: sc
+CHANGES: Added ./bin/run_assocload
+
 TAG: vega_ensemblseqload-4-3-1-1
 DATE: 11/30/2009
 STAFF: sc
